--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -206,7 +206,7 @@
 	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;
 	   		}
 	   		.button_shop-cart {
-	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;margin-right: 10px;
+	   			width: 160px;height: 40px;font-size: 18px;border-radius: 2px;margin-right: 10px;outline: none;
 	   		}
 			.collect {
 				 display: inline-block;background: url(img/icon_star.png) 0 2px no-repeat;padding-left:16px;margin:10px 0 0 20px;
