--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -19,10 +19,10 @@
 .find-teacher-list-container{overflow: hidden;width: 100%;margin-top: -1px;margin-bottom: -1px;}
 .find-teacher-list .find-teacher-card:nth-child(4){border-right:0}
 .find-teacher-card{width:25%;border-right: @borderf6;border-bottom: @borderf6;float: left;}
-.find-teacher-information{margin: 0 auto;width: 200px;height: 46px;border-bottom: @borderf6;}
-.find-teacher-name{margin-top: 14px;font-size: 26px;color: #333333;display: inline-block;}
-.find-teacher-v{margin-left: 12px;margin-bottom: -1px;vertical-align: bottom;}
-.find-teacher-sort{font-size: @fs12;color: @c9;margin-left: 7px;}
+.find-teacher-information{position:relative;margin: 0 auto;width: 200px;height: 46px;border-bottom: @borderf6;}
+.find-teacher-name{margin-top: 14px;font-size: 24px;color: #333333;display: inline-block;}
+.find-teacher-v{margin-bottom: -1px;vertical-align: bottom;}
+.find-teacher-sort{font-size: @fs12;color: #999999;position: absolute;right: 0;top: 15px;}
 .find-teacher-course{margin: @margin;font-size: 14px;margin-top: 25px;}
 .find-teacher-recommend-course{color: @c9;}
 .find-teacher-course-play{display: inline-block;width: 40px;text-align: center;background-color: #3bafda;color: #fff;border-radius: 1px;}
