完善信息更改

--- a/source/widget/UserHome.perfection/perfect-information.less
+++ b/source/widget/UserHome.perfection/perfect-information.less
@@ -216,7 +216,10 @@
 			margin-bottom: 0;
 		}
 		#add-city{
-			width: 100px;
+			max-width: 100px;
+		}
+		#add-country{
+			max-width: 136px;
 		}
 		.select.has-success{
 			border: 1px solid #68c04a;
