Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -170,47 +170,25 @@
 
 .centerHeader-notFoucs {
     .focus;
-    .btn {
-        display: inline-block;
-        width: 80px;
-        height: 33px;
-        line-height: 33px;
-        border-radius: 1px;
-        background: rgb(255, 188, 60);
-    }
-    .centerHeader-notFoucs-btn {
-        letter-spacing: 4px;
-        cursor: pointer;
-        .btn;
-        &:hover {
-            background: #e87204;
-        }
+    .centerHeader-notFoucs-btn{
+        font-size: 16px;
+        padding: 3px 12px;
+        letter-spacing: 3px;
+        border-radius:2px;
     }
 }
 
 .centerHeader-alFocus {
     .focus;
-    .btn {
-        display: inline-block;
-        width: 80px;
-        height: 33px;
-        line-height: 33px;
-        border-radius: 1px;
-        background: rgb(255, 188, 60);
-    }
     .centerHeader-alFocus-btn {
-        .btn;
-        background-color: #ccc;
         margin-right: 9px;
+        font-size: 16px;
+        padding: 3px 12px;
+        border-radius:2px;
     }
     .centerHeader-willFocus-btn {
-        cursor: pointer;
-        display: inline-block;
-        width: 80px;
-        height: 33px;
-        line-height: 33px;
-        font-size: 14px;
         color: #fff;
+        font-size: 14px;
         &:hover {
             text-decoration: underline;
         }
