老师页卡样式

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -668,6 +668,7 @@ ul,li{list-style: none;}
 					text-align: center;
 					margin: 0;
 					width: 100%;
+					padding-left: 0;
 					li {
 						display: inline-block;
 						img {
@@ -728,9 +729,15 @@ ul,li{list-style: none;}
 		.for-center {
 			display: inline-block;
 			padding-top: 15px;
-			.fresh-course-attention{
+			.ui_follow{
+				display: inline-block;
 				float: left;
-				line-height: 20px;
+				a{
+					padding: 0 8px;
+					line-height: 20px;
+					border: none;
+					font-size: 12px;
+				}
 			}
 			.look-btn {
 				background: #3399cc none repeat scroll 0 0;
@@ -740,8 +747,8 @@ ul,li{list-style: none;}
 				font-size: 12px;
 				line-height: 20px;
 				padding: 0 8px;
-				float: left;
 				margin-left: 55px;
+				float: left;
 			}
 		}
 	}
