完善信息更改

--- a/source/widget/UserHome.perfection/perfect-information.less
+++ b/source/widget/UserHome.perfection/perfect-information.less
@@ -121,7 +121,7 @@
 	.f1{
 		overflow: hidden;
 		margin-bottom: 0px;
-		height: 82px;
+		height: 75px;
 		label {
 			display: inline;
 			float: left;
@@ -388,6 +388,17 @@
 			}
 		}
 	}
+}
+.info-error-msg{
+	color: #cc0000;
+    display: inline-block;
+    font-size: 12px;
+    height: 28px;
+    line-height: 28px;
+}
+.error-msg-bg{
+	background: rgba(0, 0, 0, 0) url("img/warning.png") no-repeat scroll left center;
+    padding-left: 24px;
 }
 // 登录注册弹框
 .login-Modal .modal-content{
