--- a/source/widget/UserHome.perfection/perfect-information.less
+++ b/source/widget/UserHome.perfection/perfect-information.less
@@ -10,6 +10,9 @@
 	.modal-header{
 		border-bottom: none;
 	}
+	.infor-btn-wrap{
+		margin-top: 50px;
+	}
 }
 .FormList-Modal{
 	.modal-content{
@@ -30,7 +33,7 @@
 .information-guid{
 	// width: 530px;
 	// height: 520px;
-	background: #fff;
+	// background: #fff;
 	border-radius: 4px;
 	text-align: center;
 	padding: 10px 0 40px 0px;
