--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -100,6 +100,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .red-card-tip div span,.present-card-tip div span{height: 30px;line-height: 30px;color: #333;font-weight: bold;}
 .alertImg{margin-right: 10px;margin-bottom: 3px;}
 .info_ness{color: #e74c3c !important;}
+.info_from{display: none;}
 .gold-store-card-empty,.gold-store-present-empty {width: 100px;height: 34px;background-color: #999999;margin: 28px auto;text-align: center;font-size: 14px;line-height: 34px;color: #fff;border-radius: 3px;cursor: pointer;}
 .gold-tip-alert{color: #e74c3c !important;margin-right: 5px;}
 .gold-modal-img{float: left;width: 330px;height: 198px;display: inline-block;line-height: 198px;text-align: center;}
