Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.sidebar/sidebar.less
+++ b/source/widget/UserHome.sidebar/sidebar.less
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 
 #module-sidebar {
+    position: fixed;
     width: 60px;
+    margin-left: 3%;
     .btn {
         height: 90px;
         font-size: 14px;
