--- a/source/widget/UserHome.sidebar/sidebar.css
+++ b/source/widget/UserHome.sidebar/sidebar.css
@@ -2,6 +2,8 @@
 @charset "UTF-8";
 #module-sidebar {
   width: 60px;
+  margin-left: 4%;
+  position: fixed;
 }
 #module-sidebar .btn {
   height: 90px;
