--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -105,7 +105,7 @@
                     max-width: 270px;
                     height: 30px;
                     overflow: hidden;
-                    float: left;
+//                    float: left;
                 }
             }
         }
