--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -537,6 +537,17 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			td{
 				line-height: 43px;
 			}
+			td.examTable-firsttd{
+				width: 160px;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				word-warp:break-word; 
+				word-break:break-all;
+				text-align: left;
+				padding-left: 15px;
+				padding-right: 0;
+				text-overflow: ellipsis;
+			}
 			td.static{
 				a{
 					color: #1e89e0;
@@ -649,13 +660,13 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			width: 24%;
 		}
 		span.span-w1{
-			width: 30%;
+			width: 18%;
 		}
 		span.span-w2{
 			width: 42%;
 		}
 		span.span-w3{
-			width: 10%;
+			width: 25%;
 		}
 		span.span-w4{
 			width: 14%;
@@ -664,8 +675,10 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	.course-table.course-live-table{
 		li{
 			span.span-w1{
-				width: 30%;
+				width: 18%;
 				float: left;
+				text-align: left;
+				padding-left: 20px;
 			}
 			span.span-w2{
 				width: 42%;
@@ -677,7 +690,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 				}
 			}
 			span.span-w3{
-				width: 10%;
+				width: 25%;
 				float: left;
 			}
 			span.span-w4{
