--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -22,7 +22,7 @@
             display: block;
             width: 280px;
             height: 55px;
-            background: url(img/logo.png?__inline) no-repeat;
+            background: url(img/logo.png?__inline) no-repeat left center;
             color: transparent;
         }
     }
