--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -49,6 +49,7 @@
             font-size: 16px;
             border-radius: 0;
             border: 0 none;
+            background: #1e89e0;
         }
     }
     .h-words {
