--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -99,18 +99,18 @@
         width: 1190px;
         margin: 0 auto;
         .topleft-bar {
-            width: 450px;
-            li:nth-child(1){
+            width: 410px;
+            &>li:nth-child(1){
                 em.text-danger {
-                    max-width: 270px;
+                    max-width: 230px;
                     height: 30px;
                     overflow: hidden;
-//                    float: left;
+                    float: left;
                 }
             }
         }
         .topright-bar {
-            width: 730px;
+            width: 770px;
             height: 30px;
             text-align: right;
         }
