学霸+学习中心样式

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -674,6 +674,12 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	}
 	.course-table.course-live-table{
 		li{
+			span{
+				height: 62px;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+			}
 			span.span-w1{
 				width: 18%;
 				float: left;
