--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -101,7 +101,7 @@
 			line-height: 30px;
 			font-size: 12px;
 			padding-left: 23px;
-			font-family: "SimSun"
+			font-family: "SimSun";
 			a{
 				color: #fff;
 			}
