--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -4,6 +4,7 @@
 .centerHeader {
     width: 100%;
     padding-top: 16px;
+    padding-bottom: 20px;
     height: 100%;
     background: url('img/background.png') top center;
 }
@@ -11,6 +12,7 @@
 .centerHeader-teacher {
     width: 100%;
     padding-top: 16px;
+    padding-bottom: 20px;
     height: 100%;
     background: url('img/teacher-back.jpg') top center;
 }
@@ -18,6 +20,7 @@
 .centerHeader-stu {
     width: 100%;
     padding-top: 16px;
+    padding-bottom: 20px;
     height: 100%;
     background: url('img/stuBack.jpg') top center;
 }
@@ -165,6 +168,7 @@
     text-align: center;
     font-size: 16px;
     margin-top: 15px;
+    margin-bottom: 15px;
     color: #fff;
 }
 
@@ -479,7 +483,6 @@
         padding: 15px 0 10px;
         height: 110px;
         width: 79px;
-        cursor: pointer;
         .center-visit-header {
             width: 40px;
             height: 40px;
