--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -79,7 +79,7 @@
 	top:0;
 	z-index: 1;
 	background: rgba(0,0,0,0.6);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99ffffff,endColorstr=#99ffffff);
+	// filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99ffffff,endColorstr=#99ffffff);
 	margin-top: 36px;
 	.trends-title{
 		margin-bottom: 15px;
