无课程样式

--- a/source/widget/UserHome.notice/notice.less
+++ b/source/widget/UserHome.notice/notice.less
@@ -94,6 +94,9 @@
                 font-style: normal;
                 color: #e74c3c;
             }
+            a{
+                color: #36afda;
+            }
         }
     }
 }
