--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -889,7 +889,8 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 	margin-top: -56px;
 }
 .processingbar_bg{
-	background: #f5f5f5;
+	// background: #f5f5f5;
+	background: url("img/circle_bg.png") no-repeat;
 	border-radius: 50%;
 	height: 91px;
 	left: 50%;
