--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -100,7 +100,7 @@
         margin: 0 auto;
         .topleft-bar {
             width: 410px;
-            &>li:nth-child(1){
+            &>li:first-child{
                 em.text-danger {
                     max-width: 230px;
                     height: 30px;
