--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -26,8 +26,9 @@
 }
 
 .center-img-all {
-    width: 95px;
-    height: 95px;
+    width: 100%;
+    height: 100%;
+    border: 5px solid rgba(255, 255, 255, 0.5);
     border-radius: 50%;
 }
 
@@ -57,16 +58,16 @@
         width: 105px;
         height: 105px;
         margin: 0 auto;
-        border: 5px solid rgba(255, 255, 255, 0.5);
-        border-radius: 50%;
+//        border: 5px solid rgba(255, 255, 255, 0.5);
+//        border-radius: 50%;
         position: relative;
         //background: url('img/header-img.png');
         .centerHeader-office-img-level {
             position: absolute;
             width: 22px;
             height: 22px;
-            top: 80%;
-            left: 80%;
+            top: 75%;
+            left: 75%;
             border-radius: 50%;
             border: 2px solid rgba(255, 255, 255, 0.8);
             background-color: #3bafda;
