--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -34,6 +34,7 @@
     .nav > li > a:focus {
       text-decoration: none;
       background-color: #fff;
+        color:#1e89e0;
         
     }
     .nav-pills > li.active > a,
