--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -333,7 +333,7 @@ ul,li{list-style: none;}
 			margin-top: 6px;
 		}
 		li.video{
-			background: url("img/video.png") no-repeat 0 center;
+			background: url("img/direct-help.png") no-repeat 0 center;
 		}
 		li.homework{
 			background: url("img/homework.png") no-repeat 0 center;
