Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/UserHome.sidebar/sidebar.less
+++ b/source/widget/UserHome.sidebar/sidebar.less
@@ -16,31 +16,31 @@
         margin-bottom: 5px;
         &.fa-play-circle-o{
             background: url('img/sidebar-course.png?__inline');
-            &::before{
+            &:before{
                 content: '';
             }
         }
         &.fa-user{
             background: url('img/sidebar-teacher.png?__inline');
-            &::before{
+            &:before{
                 content: '';
             }
         }
         &.fa-commenting-o{
             background: url('img/sidebar-fresh.png?__inline');
-            &::before{
+            &:before{
                 content: '';
             }
         }
         &.fa-book{
             background: url('img/sidebar-wrong.png?__inline');
-            &::before{
+            &:before{
                 content: '';
             }
         }
         &.fa-rmb{
             background: url('img/sidebar-gold.png?__inline');
-            &::before{
+            &:before{
                 content: '';
             }
         }
