全局a的链接

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -4,7 +4,7 @@
  * @author duxinli
  * @version 4.0
  */
-@blue-color: #3bafda;
+@blue-color: #1e89e0;
 @font-color:#333;
 
 .border-radius(@radius) {
@@ -177,9 +177,10 @@
              }
        }
        a{
-          color:@font-color;
+          color:@blue-color;
           text-decoration:none;
           &:hover{
+            color:@blue-color;
             text-decoration:underline;
           }
        }
