--- a/source/widget/Public.Nav/nav.less
+++ b/source/widget/Public.Nav/nav.less
@@ -32,12 +32,12 @@
                 list-style: none;
                 a {
                     &:hover {
-                        color: #3bafda;
+                        color: #1e89e0;
                     }
                 }
                 &.current {
                     a {
-                        color: #3bafda;
+                        color: #1e89e0;
                     }
                 }
             }
