--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -37,12 +37,14 @@ ol {
     padding-left: 0;
     list-style: none;
 }
+a{
+    &:hover,&:focus{
+        color: #1e89e0;
+    }
+}
 em {
     font-style: normal;
     padding: 0 .2rem;
-}
-.breadcrumb{
-    margin-bottom: 5px;
 }
 a,button,.btn{
     outline:none;
@@ -188,7 +190,7 @@ a,button,.btn{
 #module-breadcrumb {
     background-color: transparent;
     >.active {
-        color: #333;
+        color: #1e89e0;
     }
     >li+li:before{
         content:">";
