Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -1172,18 +1172,19 @@
 .fresh-dialog-collect{
     overflow: hidden;
     .fresh-dialog-collect-content{
-        min-width: 100px;
+        min-width: 115px;
         padding: 5px 0;
         line-height: 32px;
         overflow: auto;
+        text-align: center;
         .font-size;
         .font-family;
         .fresh-dialog-collect-icon {
             width: 32px;
             height: 32px;
             display: inline-block;
-            margin-right: 10px;
-            float: left;
+            margin-right: 5px;
+            vertical-align: middle;
             background-position: left top;
             background-repeat: no-repeat;
         }
