学习中心直播大纲弹框

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -218,6 +218,9 @@ body{
 		.title-more{
 			margin-top: 44px;
 			font-size: 14px;
+			.title-detail{
+				margin-left: 0;
+			}
 		}
 		.end-time{
 			color: #666;
