--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -181,6 +181,11 @@ ul,li{list-style: none;}
 				font-size: 12px;
 				line-height: 30px;
 			}
+			.avatar-name{
+				color: #666;
+				font-size: 12px;
+				line-height: 30px;
+			}
 		}
 		.ui-username{
 			color: #333;
