--- a/source/widget/UM.Nav/nav.less
+++ b/source/widget/UM.Nav/nav.less
@@ -1,5 +1,5 @@
     .user-manage-side {
-        width: 130px;
+        width: 130px !important;
         padding: 8px 0 0 10px;
         #side-nav {
             margin: 0;
@@ -25,7 +25,7 @@
         }
     }
     .user-manage-body {
-        width: 1050px;
+        width: 1050px !important;
         .panel {
             border-color: #FFF;
             margin-bottom: 20px;
