Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -6,6 +6,8 @@ body {
 #module-myheader {
     padding: 10px 0;
     background-color: #3bafda;
+    height: 80px;
+    min-width: 1190px;
     //    .container {
     //        width: 1050px;
     //    }
@@ -27,7 +29,7 @@ body {
             line-height: 18px;
             margin-top: 10px;
             margin-bottom: 10px;
-            max-width: 280px;
+            max-width: 110px;
         }
         .mycenter-link {
             display: block;
@@ -58,9 +60,10 @@ body {
         background-color: rgba(0, 0, 0, .1);
     }
     .user-level {
-        border-radius: .8em;
-        padding: .1em 1em .2em;
+        border-radius: 8px;
+        padding: 1px 10px 2px;
         display: inline-block;
+        font-style: italic;
     }
     .user-medal {
         vertical-align: middle;
@@ -83,7 +86,7 @@ body {
 }
 div.dialog_arrow.arrow_tl {
     width: 15px;
-    background-image: url("http://img04.xesimg.com/dialog/dialog_arrow_t.png");
+    background-image: url("img/dialog_arrow_t.png");
     position: absolute;
     height: 10px;
     z-index:100;
