--- a/source/widget/UserHome.header/homeHeader.css
+++ b/source/widget/UserHome.header/homeHeader.css
@@ -50,9 +50,10 @@ body {
   background-color: rgba(0, 0, 0, 0.1);
 }
 #module-myheader .user-level {
-  border-radius: .8em;
-  padding: .1em 1em .2em;
+  border-radius: 8px;
+  padding: 1px 10px 2px;
   display: inline-block;
+    font-style: italic;
 }
 #module-myheader .user-medal {
   vertical-align: middle;
