--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -292,7 +292,7 @@ ul,li{list-style: none;}
 		font-size: 12px;
 		padding-right: 14px;
 		a{
-			color: #3bafda;
+			color: #1e89e0;
 		}
 		em{
 			font-style: normal;
@@ -414,7 +414,7 @@ ul,li{list-style: none;}
 	padding-right: 2px;
 }
 .course-list .free-course-attention a.free-add-cancel-btn {
-	color: #3bafda;
+	color: #1e89e0;
 }
 .hot-course-list{
 	padding: 12px;
@@ -808,7 +808,7 @@ ul,li{list-style: none;}
 		border-left: 1px solid #eaeaea;
 		background: #fff;
 		a{
-			color: #3bafda;
+			color: #1e89e0;
 			&:focus{
 				outline: none;
 			}
