--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -70,6 +70,17 @@
 .glory_tips_con{
 	text-align: center;
 }
+.glory-grades-trends-bg{
+	background: #000;
+	opacity: 0.6;
+	filter:alpha(opacity=60);
+	width: 280px;
+	height: 300px;
+	position: absolute;
+	right: 0;
+	top:0;
+	margin-top: 36px;
+}
 .glory-grades-trends{
 	width: 280px;
 	height: 300px;
@@ -78,8 +89,6 @@
 	right: 0;
 	top:0;
 	z-index: 1;
-	background: rgba(0,0,0,0.6);
-	// filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99ffffff,endColorstr=#99ffffff);
 	margin-top: 36px;
 	.trends-title{
 		margin-bottom: 15px;
@@ -92,6 +101,7 @@
 			margin-top: 0;
 			overflow: hidden;
 			color: #fff;
+			opacity: 1
 		}
 	}
 	.glory-grades-list{
@@ -103,6 +113,7 @@
 			font-size: 12px;
 			padding-left: 23px;
 			font-family: "SimSun";
+			opacity: 1;
 			a{
 				color: #fff;
 			}
