字体颜色更改

--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -146,7 +146,7 @@ a,button,.btn{
     }
 }
 .nav-tabs {
-    border-bottom: 1px solid #3bafda;
+    border-bottom: 1px solid @btn-primary;
     font-size: 14px;
     margin-bottom: 20px;
     li {
@@ -255,7 +255,7 @@ ul.live-list-tabs {
         }
         &.active {
             i.fa {
-                color: #3bafda;
+                color: @btn-primary;
             }
         }
     }
@@ -272,8 +272,8 @@ ul.grade-list {
         margin-right:15px;
         cursor: pointer;
         &.active {
-           border-bottom:2px solid #3bafda;
-           color: #3bafda;
+           border-bottom:2px solid @btn-primary;
+           color: @btn-primary;
        }
    }
 }
