--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -2,6 +2,7 @@
 @borderColor: #eaeaea;
 @fontSize: 12px;
 @dark333: #333;
+@blueColor: #1e89e0;
 body{
 	background: #f1f2f6;
 }
@@ -268,7 +269,7 @@ body{
 			.direct-btn{
 				color: @red;
 				a{
-					color: #3bafda;
+					color: @blueColor;
 				}
 			}
 		}
@@ -452,7 +453,7 @@ body{
 				color: @red;
 			}
 			.static{
-				color: #3bafda;
+				color: @blueColor;
 			}
 		}
 	}
@@ -474,7 +475,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 		float: right;
 		font-size: 12px;
 		line-height: 30px;
-		color: #3bafda;
+		color: @blueColor;
 	}
 	li{
 		float: left;
@@ -553,7 +554,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			}
 			td.static{
 				a{
-					color: #1e89e0;
+					color: @blueColor;
 				}
 			}
 		}
@@ -779,10 +780,10 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 				color: @red;
 			}
 			.wait-look{
-				color: #3bafda;
+				color: @blueColor;
 				a{
 
-					color: #3bafda;
+					color: @blueColor;
 				}
 			}
 			span.yellow-mark{
@@ -812,7 +813,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 }
 // 直播课程列表	
 .teacher-tab{
-	border-bottom: 1px solid #3bafda;
+	border-bottom: 1px solid @blueColor;
 	overflow: hidden;
 	margin-bottom: 22px;
 	margin-left: 0;
