--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -3,17 +3,17 @@ em{font-style: normal;}
 table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .none-tip{margin-top: 100px;text-align: center;}
 /* 金币明细 */
-.gold-detail-title{padding:0;margin: 0;overflow: hidden;font-size: 14px;border-bottom: 1px solid #3bafda;}
+.gold-detail-title{padding:0;margin: 0;overflow: hidden;font-size: 14px;border-bottom: 1px solid #1e89e0;}
 .gold-detail-title a{float: left;width: 91px;text-decoration: none;text-align: center;line-height: 30px;cursor: pointer;}
-.gold-detail-title-on{background-color: #3bafda;color: #ffffff;border-radius: 5px 5px 0 0;}
+.gold-detail-title-on{background-color: #1e89e0;color: #ffffff;border-radius: 5px 5px 0 0;}
 .gold-detail-account{width: 100%;height: 50px;border-radius: 8px;background-color: #fff;margin: 22px 0;line-height: 50px;}
 .gold-detail-account em{font-size: 24px;color: #e74c3c;margin: 0 16px;}
 .gold-detail-account-title{float: left;margin-left: 18px;display: inline-block;font-size: 12px;}
-.gold-detail-account-exchange{float: right;margin-right: 20px;font-size: 14px;color: #3bafda;display: inline-block;cursor: pointer;}
+.gold-detail-account-exchange{float: right;margin-right: 20px;font-size: 14px;color: #1e89e0;display: inline-block;cursor: pointer;}
 .gold-detail-check-date{height: 30px;float: right;}
 .gold-detail-check-title{margin: 0 13px;font-size: 12px;color: #999;float: left;line-height: 30px;}
 .gold-detail-check-date input{float: left;display: inline-block;width: 160px;height: 30px;border: 1px solid #dcdcdc;background-color: #fff;}
-.gold-detail-check{float: left;margin-left: 12px;cursor: pointer;border-radius: 1px;width: 60px;height: 30px;display: inline-block;color:#fff;text-align: center;line-height: 30px;background-color: #3bafda;}
+.gold-detail-check{float: left;margin-left: 12px;cursor: pointer;border-radius: 1px;width: 60px;height: 30px;display: inline-block;color:#fff;text-align: center;line-height: 30px;background-color: #1e89e0;}
 .gold-detail-show-title{width: 100%;height: 52px;margin-top: 74px;background-color: #fff;border-radius: 5px;color: #999;font-size: 16px;}
 .gold-detail-show-title span{display: inline-block;text-align: center;width: 24.5%;height: 52px;line-height: 52px;}
 .gold-detail-show-container{margin-top:1px;border-radius: 5px;overflow: hidden;}
@@ -21,7 +21,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-detail-show span{display: inline-block;text-align: center;width: 24.5%;height: 62px;line-height: 62px;}
 .gold-detail-show-name,.gold-detail-show-time{color: #666;}
 .gold-detail-show-add,.gold-detail-show-number{color:#e74c3c;}
-.gold-detail-show-dec{color:#3bafda;}
+.gold-detail-show-dec{color:#1e89e0;}
 .gold-detail-block-change,.gold-store-block-change,.gold-exchange-block-change{display: none;}
 .gold-exchange-use-block-change{width: 905px;margin-left: 5px;display: none;}
 //#dateStartCalendar{width: 191px; height: 182px;}
@@ -29,7 +29,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 /* 金币商城 */
 .gold-store-title-container,.gold-exchange-title-container{padding:0;float: left;border-radius: 5px;margin-right: 22px;margin-top: 22px;width: 122px;height: 660px;background-color: #fff;font-size: 14px;overflow: hidden;}
 .gold-store-title-container li,.gold-exchange-title-container li{height: 32px;line-height: 32px;margin: 22px 0;padding-left: 20px;cursor: pointer;}
-.gold-store-title-on,.gold-exchange-title-on{background-color: #3bafda;color: #fff;}
+.gold-store-title-on,.gold-exchange-title-on{background-color: #1e89e0;color: #fff;}
 .gold-store-container,.gold-exchange-container{position: relative;}
 .gold-store-card-box,.gold-store-present-box,.gold-exchange-card-box,.gold-exchange-present-box{overflow: hidden;width: 934px;position: absolute;left: 140px;margin-top: 12px;}
 .gold-exchange-card-box-p{height: 18px;width: 1px;background-color: #eaeaea;display: inline-block;margin-left: 21px;margin-bottom: 0;vertical-align: middle;}
@@ -46,11 +46,11 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-card-exchange,.gold-store-present-exchange{width: 100px;height: 34px;background-color: #e74c3c;margin: 28px auto;text-align: center;font-size: 14px;line-height: 34px;color: #fff;border-radius: 3px;cursor: pointer;}
 .gold-store-present-rank,.gold-exchange-rank{width: 905px;height: 52px;margin-top: 10px;margin-left: 5px;font-size: 14px;background-color: #fff;border-radius: 5px;overflow: hidden;}
 .gold-store-present-rank-by,.gold-exchange-rank-by{line-height: 52px;margin-left: 22px;color: #999;cursor: pointer;position: relative;}
-.gold-store-present-rank-by a:hover{color:#3bafda;}
+.gold-store-present-rank-by a:hover{color:#1e89e0;}
 .gold-store-present-rank-by .glyphicon{top: 2px;}
 .gold-store-present-rank-new{width: 52px;margin-left: 5px;}
 .gold-store-new-arrow{position: absolute;left: 133px;}
-.gold-store-present-rank-focus{color: #3bafda;}
+.gold-store-present-rank-focus{color: #1e89e0;}
 .gold-store-present-card-container{overflow: hidden;width: 934px;margin-top: 10px;}
 .gold-exchange-present-card-container{overflow: hidden;width: 934px;}
 .gold-store-present-card-center{text-align: center;font-size: 14px;}
