--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -71,6 +71,7 @@
   float: left;
 }
 .find-teacher-information {
+  position: relative;
   margin: 0 auto;
   width: 200px;
   height: 46px;
@@ -78,19 +79,20 @@
 }
 .find-teacher-name {
   margin-top: 14px;
-  font-size: 26px;
+  font-size: 24px;
   color: #333333;
   display: inline-block;
 }
 .find-teacher-v {
-  margin-left: 12px;
   margin-bottom: -1px;
   vertical-align: bottom;
 }
 .find-teacher-sort {
   font-size: 12px;
   color: #999999;
-  margin-left: 7px;
+  position: absolute;
+  right: 0;
+  top: 15px;
 }
 .find-teacher-course {
   margin: 0 17px;
@@ -104,7 +106,7 @@
   display: inline-block;
   width: 40px;
   text-align: center;
-  background-color: #3bafda;
+  background-color: #1e89e0;
   color: #fff;
   border-radius: 1px;
 }
