--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -3,7 +3,7 @@
 .live-title div{height: 22px;margin-left: 87px;border-bottom: 1px solid #eaeaea;}
 .live-scroll-btn-container{position: absolute;right: 0;top: 8px;list-style: none;}
 .live-scroll-btn-container li{float: left;margin-left: 5px;width: 10px;height: 10px;border: 1px solid #e5e7ec;border-radius: 10px;}
-.live-scroll-btn-on{background-color: #3bafda}
+.live-scroll-btn-on{background-color: #1e89e0}
 .live-scroll-box,.live-list-container{overflow: hidden;width: 1274px;}
 .live-scroll-box-container{position: absolute;width: 100%;}
 .live-scroll-container{position: relative;width: 100%;margin-bottom: 30px;height: 291px;overflow: hidden}
@@ -30,7 +30,7 @@
 }
 .live-enter{width: 150px;height: 36px;display: inline-block;background-color: #e74c3c;color: #fff;font-size: 14px;text-align: center;line-height: 36px;border-radius: 1px;cursor: pointer;}
 .live-enter-box{width: 245px;height: 50px;text-align: center;line-height: 50px;}
-.live-blue{background-color: #3bafda;}
+.live-blue{background-color: #1e89e0;}
 .live-grey{background-color: #bfbfbf;}
 .liveBreadCrumb{margin-top: 17px;}
 .choice .row{margin: 0;}
