--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -36,6 +36,10 @@
     margin: 0 auto;
     background: url('img/header.jpg');
     height: 300px;
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 .centerHeader-office-background {
@@ -535,6 +539,7 @@
     padding-left: 15px;
     padding-right: 15px;
     border-bottom: 1px solid #eaeaea;
+    margin-bottom: 1px;
     span {
         color: #000;
         display: inline-block;
@@ -687,6 +692,14 @@
             padding-right: 30px;
             height: 65px;
             overflow: hidden;
+        }
+        &:first-child {
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+        }
+        &:last-child {
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
         }
     }
 }
