--- a/source/widget/UM.Nav/nav.less
+++ b/source/widget/UM.Nav/nav.less
@@ -10,7 +10,7 @@
                     color: #666;
                 }
                 .current {
-                    color: #3bafda;
+                    color: #1e89e0;
                     font-weight: bold;
                 }
                 &.nav-header {
