--- a/source/widget/UM.card.activation/card.activation.less
+++ b/source/widget/UM.card.activation/card.activation.less
@@ -63,7 +63,7 @@
         }
         a{
             font-size: 12px;
-            color: #3bafda;
+            color: #1e89e0;
         }
     }
 }
