--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -18,9 +18,9 @@
             a{
                 display: inline-block;
                 height: 24px;
-                color: #3bafda;
+                color: #1e89e0;
                 font-weight: bold;
-                border-bottom: 2px solid #3bafda;
+                border-bottom: 2px solid #1e89e0;
             }
         }
     }
