--- a/source/widget/UM.card.learn/card.learn.less
+++ b/source/widget/UM.card.learn/card.learn.less
@@ -17,9 +17,9 @@
             a{
                 display: inline-block;
                 height: 24px;
-                color: #3bafda;
+                color: #1e89e0;
                 font-weight: bold;
-                border-bottom: 2px solid #3bafda;
+                border-bottom: 2px solid #1e89e0;
             }
         }
     }
