改字体色值

--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -92,7 +92,7 @@
 				                  	 		&.icon-sign {
 				                  	 			background: url(img/icon_07_white.png) right 14px no-repeat;
 				                  	 		}
-				                  	 		&:hover {color: #3bafda;}
+				                  	 		&:hover {color: #1e89e0;}
 				                  	 	}
                                         span.errorExplain{
                                            display: block;width: 60px;color: red;cursor: pointer;position: absolute;left:120px;top:0;z-index: 1;
@@ -127,7 +127,7 @@
 				                  	 		}
 					                  	 	a {
 										 	 	display: block;width: 160px;font-size: 12px;color: #666;
-										 	 	&:hover {color: #3bafda;}
+										 	 	&:hover {color: #1e89e0;}
 										 	 }
 									 	 }
 									 }
