Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -40,6 +40,14 @@
         margin-left: 0;
         margin-right: 0;
     }
+    .ui_follow{
+        .follow_cancel{
+            &:hover{
+                text-decoration: underline;
+            }
+            color:#fff;
+        }
+    }
 }
 
 .centerHeader-office-background {
@@ -469,6 +477,14 @@
     .row {
         margin-left: 0;
         margin-right: 0;
+    }
+    .ui_follow{
+        .follow_cancel{
+            &:hover{
+                text-decoration: underline;
+            }
+            color:#fff;
+        }
     }
 }
 
