--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -189,6 +189,8 @@
        }
        .fresh-info{
            display: inline;
+           word-break:break-all; /*支持IE，chrome，FF不支持*/
+　　       word-wrap:break-word;/*支持IE，chrome，FF*/
        }
     }
     .fresh-media{
