--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -28,8 +28,8 @@
 		}
 	} 
 }
-.glory-content-wrap{
-	margin-top: 15px;
+.glory-main-wrap{
+	margin-top: 20px;
 	overflow: hidden;
 }
 .none-content{
