Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -842,7 +842,7 @@
                     .font-family;
                     color: @font-color;
                     &:hover {
-                        color: #2599c4;
+                        color: #1e89e0;
                     }
                 }
                 &.current {
