--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -30,6 +30,7 @@ body {
             margin-top: 10px;
             margin-bottom: 10px;
             max-width: 110px;
+            overflow: hidden;
         }
         .mycenter-link {
             display: block;
