--- a/source/widget/UserHome.wrongQues/error_question.less
+++ b/source/widget/UserHome.wrongQues/error_question.less
@@ -25,7 +25,8 @@
   
   .nav-tabs{
     margin-bottom: 10px;
-      overflow: hidden;
+    border-bottom: 1px solid #3bafda;
+    overflow: hidden;
   } 
     
 }
@@ -138,7 +139,8 @@
     cursor: pointer;
     width: 70px;
       &:hover{
-          color:#3bafda;
+          
+          color:#1e89e0;
       }
   }
     .que-body-img-lb{
