--- a/source/widget/UM.Nav/nav.less
+++ b/source/widget/UM.Nav/nav.less
@@ -8,6 +8,9 @@
                 line-height: 24px;
                 a{
                     color: #666;
+                    &:hover{
+                        color: #1e89e0;
+                    }
                 }
                 .current {
                     color: #1e89e0;
