--- a/source/widget/UserHome.gold/gold.css
+++ b/source/widget/UserHome.gold/gold.css
@@ -22,7 +22,7 @@ table tr td {
   margin: 0;
   overflow: hidden;
   font-size: 14px;
-  border-bottom: 1px solid #1e89e0;
+  border-bottom: 1px solid #3bafda;
 }
 .gold-detail-title a {
   float: left;
@@ -176,7 +176,7 @@ table tr td {
 }
 .gold-store-title-on,
 .gold-exchange-title-on {
-  background-color: #1e89e0;
+  background-color: #3bafda;
   color: #fff;
 }
 .gold-store-container,
