--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -3,7 +3,7 @@ em{font-style: normal;}
 table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .none-tip{margin-top: 100px;text-align: center;}
 /* 金币明细 */
-.gold-detail-title{padding:0;margin: 0;overflow: hidden;font-size: 14px;border-bottom: 1px solid #1e89e0;}
+.gold-detail-title{padding:0;margin: 0;overflow: hidden;font-size: 14px;border-bottom: 1px solid #3bafda;}
 .gold-detail-title a{float: left;width: 91px;text-decoration: none;text-align: center;line-height: 30px;cursor: pointer;}
 .gold-detail-title-on{background-color: #1e89e0;color: #ffffff;border-radius: 5px 5px 0 0;}
 .gold-detail-account{width: 100%;height: 50px;border-radius: 8px;background-color: #fff;margin: 22px 0;line-height: 50px;}
@@ -29,7 +29,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 /* 金币商城 */
 .gold-store-title-container,.gold-exchange-title-container{padding:0;float: left;border-radius: 5px;margin-right: 22px;margin-top: 22px;width: 122px;height: 660px;background-color: #fff;font-size: 14px;overflow: hidden;}
 .gold-store-title-container li,.gold-exchange-title-container li{height: 32px;line-height: 32px;margin: 22px 0;padding-left: 20px;cursor: pointer;}
-.gold-store-title-on,.gold-exchange-title-on{background-color: #1e89e0;color: #fff;}
+.gold-store-title-on,.gold-exchange-title-on{background-color: #3bafda;color: #fff;}
 .gold-store-container,.gold-exchange-container{position: relative;}
 .gold-store-card-box,.gold-store-present-box,.gold-exchange-card-box,.gold-exchange-present-box{overflow: hidden;width: 934px;position: absolute;left: 140px;margin-top: 12px;}
 .gold-exchange-card-box-p{height: 18px;width: 1px;background-color: #eaeaea;display: inline-block;margin-left: 21px;margin-bottom: 0;vertical-align: middle;}
