--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -87,7 +87,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .p2{height: 10px;width: 2px;background-color: #fff;position: absolute;top: 3px;left: 7px;}
 .red-card-num,.present-num{display: inline-block;vertical-align: middle;width: 47px;height: 22px;border: 1px solid #eee;background-color: #fff;text-align: center;line-height: 22px;}
 .red-card-add,.present-add{display: inline-block;margin: 0 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #3398cc;border-radius: 18px;position: relative;cursor: pointer;}
-.red-card-exchange{width: 132px;height: 42px;margin-top:60px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;cursor: pointer;position: absolute;bottom: 0}
+.red-card-exchange{width: 132px;height: 42px;margin-top:60px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;cursor: pointer;}
 .present-exchange{float:right;width: 132px;height: 42px;margin-top:60px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;cursor: pointer;}
 .present-address-box span{display: inline-block;font-size:16px;width: 100%;color: #666;padding-bottom: 16px;}
 .present-address-box form{margin-top: 20px;}
