--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -75,6 +75,11 @@ ul,li{list-style: none;}
 		float: left;
 		display: inline;
 		margin-right: 14px;
+		.ui_follow{
+			a,span{
+				font-size: 12px;
+			}
+		}
 		span.ui-user-name{
 			font-size: 14px;
 		}
