--- a/source/widget/UserHome.perfection/perfect-information.less
+++ b/source/widget/UserHome.perfection/perfect-information.less
@@ -426,3 +426,14 @@
 		margin-left: 5px;
 	}
 }
+.fresh-course-focus-attention{
+	overflow: hidden;
+	a{
+		float: left;
+		font-size: 12px;
+	}
+	span{
+		float: left;
+		font-size: 12px;
+	}
+}
