--- a/source/widget/Mall.indexTrends/ui-trends.less
+++ b/source/widget/Mall.indexTrends/ui-trends.less
@@ -89,6 +89,9 @@
 				}
 			}
 			.media-heading {
+                width:130px;
+                height: 20px;
+                overflow: hidden;
 				font-size: 18px;
 			}
 			.user-v {
