--- a/source/widget/UserHome.gold/gold.css
+++ b/source/widget/UserHome.gold/gold.css
@@ -94,7 +94,7 @@ table tr td {
   color: #fff;
   text-align: center;
   line-height: 30px;
-  background-color: #1e89e0;
+  background-color: #3bafda;
 }
 .gold-detail-show-title {
   width: 100%;
