--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -106,7 +106,7 @@
   display: inline-block;
   width: 40px;
   text-align: center;
-  background-color: #1e89e0;
+  background-color: #3bafda;
   color: #fff;
   border-radius: 1px;
 }
