看直播颜色

--- a/source/widget/Mall.live/live.css
+++ b/source/widget/Mall.live/live.css
@@ -147,7 +147,7 @@
   line-height: 50px;
 }
 .live-blue {
-  background-color: #1e89e0;
+  background-color: #3bafda;
 }
 .live-grey {
   background-color: #bfbfbf;
