--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -30,7 +30,7 @@
 }
 .live-enter{width: 150px;height: 36px;display: inline-block;background-color: #e74c3c;color: #fff;font-size: 14px;text-align: center;line-height: 36px;border-radius: 1px;cursor: pointer;}
 .live-enter-box{width: 245px;height: 50px;text-align: center;line-height: 50px;}
-.live-blue{background-color: #1e89e0;}
+.live-blue{background-color: #3bafda;}
 .live-grey{background-color: #bfbfbf;}
 .liveBreadCrumb{margin-top: 17px;}
 .choice .row{margin: 0;}
