--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -23,7 +23,7 @@
 .find-teacher-name{margin-top: 14px;font-size: 24px;color: #333333;display: inline-block;}
 .find-teacher-v{margin-bottom: -1px;vertical-align: bottom;}
 .find-teacher-sort{font-size: @fs12;color: #999999;position: absolute;right: 0;top: 15px;}
-.find-teacher-course{margin: @margin;font-size: 14px;margin-top: 25px;}
+.find-teacher-course{margin: @margin;font-size: 14px;margin-top: 20px;height: 40px;}
 .find-teacher-recommend-course{color: @c9;}
 .find-teacher-course-play{display: inline-block;width: 40px;text-align: center;background-color: #3bafda;color: #fff;border-radius: 1px;}
 .find-teacher-course-green{background-color: #37bc9b;}
