--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -97,7 +97,8 @@
 .find-teacher-course {
   margin: 0 17px;
   font-size: 14px;
-  margin-top: 25px;
+  margin-top: 20px;
+  height: 40px;
 }
 .find-teacher-recommend-course {
   color: #999999;
