--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -146,7 +146,7 @@ a,button,.btn{
     }
 }
 .nav-tabs {
-    border-bottom: 1px solid @btn-primary;
+    border-bottom: 1px solid @link-hover;
     font-size: 14px;
     margin-bottom: 20px;
     li {
