Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/UserHome.homework/homework.less
+++ b/source/widget/UserHome.homework/homework.less
@@ -237,9 +237,10 @@
                             }
                         }
                         img{
-                            width: auto;
-                            height: auto;
                             cursor: pointer;
+                            max-width: 100%;
+                            width: 100%;
+                            height: 100%;
                             &.homework-Feedback-small-img{
                                 width: 100%;
                                 height: 100%;
