--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -33,25 +33,27 @@
             display:none;
             .hpr-box{
                 width: 540px;
-                height: 385px;
+                height: 400px;
                 overflow:auto;
                 overflow-x:hidden;
                 margin-bottom: 35px;
                 img{
-                    width: 60px;
-                    height: 60px;
+                    width: 70px;
+                    height: 70px;
                     border-radius: 50%;
-                    margin: 18px;
+                    margin: 15px;
+                    padding: 4px;
+                    border: 1px solid #dedede;
                     cursor: pointer;
                     &:hover{
-                        border: 3px solid #3bafda;
+                        border: 2px solid #3bafda;
                         box-shadow:0px 0px 10px #3bafda; 
                         -moz-box-shadow:0px 0px 10px #3bafda;     
                         -webkit-box-shadow:0px 0px 10px #3bafda;   
                     }
                 }
                 .imghover{
-                    border: 3px solid #3bafda;
+                    border: 2px solid #3bafda;
                     box-shadow:0px 0px 10px #3bafda; 
                     -moz-box-shadow:0px 0px 10px #3bafda;     
                     -webkit-box-shadow:0px 0px 10px #3bafda;  
@@ -226,9 +228,11 @@
         #hp-small,#hp-middle,#hp-big{
             text-align: center;
             img{
-                margin: 30px auto 10px;
                 display: block;
+                margin: 30px auto 10px;
                 border-radius: 50%;
+                padding: 4px;
+                border: 1px solid #dedede;
             }
         }
         #hp-small{
