课程详情页视频

--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -541,7 +541,7 @@
 }
 #xuebox_videoPlayWrap {
     .dialog_content {
-        overflow: hidden;padding:10px;
+        overflow: hidden;padding:5px 10px 10px 10px;
     }
 }
 /*
