Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -1298,4 +1298,11 @@
    }
 }
 
+.fresh-red-circle{
+   width: 6px;
+   height: 6px;
+   margin-left: 2px;
+   background: url('img/fresh-red-circle.png');
+}
+
 
