--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -6,7 +6,7 @@
     padding-top: 16px;
     padding-bottom: 20px;
     height: 100%;
-    background: url('img/background.png') top center;
+    background: url('img/background.png') top center no-repeat;
 }
 
 .centerHeader-teacher {
@@ -14,7 +14,7 @@
     padding-top: 16px;
     padding-bottom: 20px;
     height: 100%;
-    background: url('img/teacher-back.jpg') top center;
+    background: url('img/teacher-back.jpg') top center no-repeat;
 }
 
 .centerHeader-stu {
@@ -22,7 +22,7 @@
     padding-top: 16px;
     padding-bottom: 20px;
     height: 100%;
-    background: url('img/stuBack.jpg') top center;
+    background: url('img/stuBack.jpg') top center no-repeat;
 }
 
 .center-img-all {
@@ -644,6 +644,7 @@
                 width: 40px;
                 height:40px;
                 border-radius:50%;
+                cursor: pointer;
             }
         }
         .rank-name {
