--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -20,8 +20,9 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-detail-show{width: 100%;height: 62px;background-color: #fff;font-size: 14px;border-top:1px solid #f5f5f5;}
 .gold-detail-show span{display: inline-block;text-align: center;width: 24.5%;height: 62px;line-height: 62px;}
 .gold-detail-show-name,.gold-detail-show-time{color: #666;}
-.gold-detail-show-add,.gold-detail-show-number{color:#e74c3c;}
-.gold-detail-show-dec{color:#1e89e0;}
+.gold-detail-show-add{color: #3abb9d;}
+.gold-detail-show-number{color:#e74c3c;}
+.gold-detail-show-dec{color:#666;}
 .gold-detail-block-change,.gold-store-block-change,.gold-exchange-block-change{display: none;}
 .gold-exchange-use-block-change{width: 905px;margin-left: 5px;display: none;}
 //#dateStartCalendar{width: 191px; height: 182px;}
