--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -739,7 +739,7 @@ ul,li{list-style: none;}
 		text-align: center;
 		.for-center {
 			display: inline-block;
-			padding-top: 15px;
+			padding: 15px 0 10px 0;
 			.ui_follow{
 				display: inline-block;
 				float: left;
@@ -748,6 +748,7 @@ ul,li{list-style: none;}
 					line-height: 20px;
 					border: none;
 					font-size: 12px;
+					float: left;
 				}
 			}
 			.look-btn {
